// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstallGitHubApp message rendering works if owner is organization 1`] = `
Object {
  "attachments": Array [
    Object {
      "actions": Array [
        Object {
          "style": "primary",
          "text": "Install GitHub App",
          "type": "button",
          "url": "https://github.com/apps/url-to-slack-app",
        },
      ],
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Either the app isn't installed on your repository or the repository does not exist. Install it to proceed.
_Note: You need to be an organization owner to install the app (or ask one to install it for you)._",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`InstallGitHubApp message rendering works with if owner is user  1`] = `
Object {
  "attachments": Array [
    Object {
      "actions": Array [
        Object {
          "style": "primary",
          "text": "Install GitHub App",
          "type": "button",
          "url": "https://github.com/apps/url-to-slack-app",
        },
      ],
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Either the app isn't installed on your repository or the repository does not exist. Install it to proceed.
_Note: You will need to ask the owner of the repository to install it for you. Give them <https://github.com/apps/url-to-slack-app|this link.>_",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`InstallGitHubApp message rendering works without a note 1`] = `
Object {
  "attachments": Array [
    Object {
      "actions": Array [
        Object {
          "style": "primary",
          "text": "Install GitHub App",
          "type": "button",
          "url": "https://github.com/apps/url-to-slack-app",
        },
      ],
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Either the app isn't installed on your repository or the repository does not exist. Install it to proceed.",
    },
  ],
  "response_type": "ephemeral",
}
`;
